@@ -1,5 +1,5 @@
 # Microsoft Developer Studio Project File - Name="smpackage" - Package Owner=<4>
-# Microsoft Developer Studio Generated Build File, Format Version 6.00
+# Microsoft Developer Studio Generated Build File, Format Version 60000
 # ** DO NOT EDIT **
 
 # TARGTYPE "Win32 (x86) Application" 0x0101
@@ -86,10 +86,6 @@ LINK32=link.exe
 
 # Name "smpackage - Win32 Release"
 # Name "smpackage - Win32 Debug"
-# Begin Source File
-
-SOURCE=.\converttheme.bmp
-# End Source File
 # Begin Source File
 
 SOURCE=.\EditInsallations.cpp
